@@ -1,3 +1,12 @@
+2008-01-10  Alexander Larsson  <alexl@redhat.com>
+
+        * common/gmounttracker.c:
+	Handle error reply from list_mounts.
+
+        * programs/gvfs-mount.c:
+	Add option to list mounts.
+	Based on patch from nf2@scheinwelt.at
+
 2008-01-09  Alexander Larsson  <alexl@redhat.com>
 
         * hal/ghaldrive.c:
